# CampusMind

./: .gitignore  README.md  RUN_GUIDE.md  UPDATES.md  check.py  docker-compose.yml
backend/: README.md  currentopenapi.json  main.py  pyproject.toml
backend/api/: dependencies.py
backend/api/agent/: __init__.py  graph.py  nodes.py  state.py
backend/api/routers/: admin.py  announcements.py  auth.py  calendar.py  chat.py  classroom.py  notifications.py  superadmin.py  upload.py
backend/api/services/: ingestion.py
backend/chroma_data/: chroma.sqlite3
backend/core/: celery_app.py  config.py  llm_router.py  security.py  websocket.py
backend/database/: chroma.py  mongo.py  redis.py
backend/models/: schemas.py
backend/scripts/: debug_chroma_meta.py  debug_db.py  fix_wsl_ip.py  full_system_results.txt  full_system_test.py  inspect_chroma.py  run_chat_demo.py  seed_superadmin.py  test_rag.py  test_rag_results.txt  test_results.txt  test_router_debug.py  test_sse_chat.py
frontend/: README.md  middleware.ts  package-lock.json  package.json  requirements.txt
frontend/app/: config.ts  data.ts  globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/calendar/: page.tsx
frontend/app/classroom/[id]/: page.tsx
frontend/app/classroom/[id]/chat/: page.tsx
frontend/app/classroom/[id]/files/[fileId]/: page.tsx
frontend/app/classrooms/: page.tsx
frontend/app/components/: ClassroomCard.tsx  ClassroomDashboard.tsx  Globe.tsx  Header.tsx  HeroSection.tsx  SemesterSection.tsx  Sidebar.tsx  SubjectCard.tsx  YearSelector.tsx
frontend/app/constants/: academic.ts
frontend/app/context/: auth-context.tsx
frontend/app/deep-base/: page.tsx
frontend/app/deep-learn/: page.tsx
frontend/app/hooks/: useAnnouncements.ts  useChat.ts  useClassroomSocket.ts  useClassrooms.ts  useFiles.ts
frontend/app/lib/: api.ts
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/signup/: page.tsx
